--- a/zuidvast/index.html
+++ b/zuidvast/index.html
@@ -26,9 +26,9 @@
     					<div class="li"><a class="under" id="extra_link" href="#" onclick="goToPage('extra');">Extra</a></div> 
     					<div class="li"><a class="under" id="over_ons_link" href="#" onclick="goToPage('over_ons');">Over ons</a></div> 
     					--> 
-    					<div class="li"><a class="under" id="vacatures_link" href="javascript:void(0);" onclick="goToPage('vacatures');">Vacatures</a></div> 
-    					<div class="li"><a class="under" id="contact_link" href="javascript:void(0);" onclick="goToPage('contact');">Contact</a></div> 
-    					<div class="li"><a class="currentmenu" id="home_link" href="javascript:void(0);" onclick="goToPage('home');">Home</a></div> 
+    					<div class="li"><a class="under" id="vacatures_link" href="#" onclick="goToPage('vacatures');return false;">Vacatures</a></div> 
+    					<div class="li"><a class="under" id="contact_link" href="#" onclick="goToPage('contact');return false;">Contact</a></div> 
+    					<div class="li"><a class="currentmenu" id="home_link" href="#" onclick="goToPage('home');return false;">Home</a></div> 
     					
     				</div> 
     				<!--<div style="float:left; padding-top:16px;">
@@ -306,11 +306,11 @@
     			<div class="about"></div> 
     			<div class="sponsored clear" style="float:right;"> 
     				<!--<a href="javascript:void(0);" onclick="goToPage('voorwaarden');">Voorwaarden</a>&nbsp;|&nbsp;-->
-    				<a href="javascript:void(0);" onclick="goToPage('disclaimer');">Disclaimer</a>&nbsp;|&nbsp;
+    				<a href="#" onclick="goToPage('disclaimer');return false;">Disclaimer</a>&nbsp;|&nbsp;
     				<!--  <a href="" onclick="goToPage('over_ons');">Over ons</a>&nbsp;|&nbsp; -->
-    				<a href="javascript:void(0);" onclick="goToPage('contact');">Contact</a>&nbsp;|&nbsp;
-    				<a href="javascript:void(0);" onclick="goToPage('vacatures');">Vacatures</a>&nbsp;|&nbsp;
-    				Zuidvast 2008 - a <a href="javascript:void(0);" onclick="goToPage('home');">Zuidvast</a> Company </div> 
+    				<a href="#" onclick="goToPage('contact');return false;">Contact</a>&nbsp;|&nbsp;
+    				<a href="#" onclick="goToPage('vacatures');return false;">Vacatures</a>&nbsp;|&nbsp;
+    				Zuidvast 2008 - a <a href="#" onclick="goToPage('home');return false;">Zuidvast</a> Company </div> 
     		</div>		
     		
     	</div> 
